@@ -9,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 import com.example.demo.quote.repository.QuoteRepository;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -26,8 +25,11 @@ public class DataInitializer implements CommandLineRunner {
      * 
      * @param args コマンドライン引数
      */
+    // テストしやすいメソッドに委譲
+
     @Override
     public void run(String... args) throws Exception {
+
         // 課題1 データ初期化の外部化
         try {
             String csvFile = "src\\main\\java\\com\\example\\demo\\Quote.csv";// ｃｓｖファイルのパス指定して開く
@@ -35,24 +37,25 @@ public class DataInitializer implements CommandLineRunner {
 
             BufferedReader br = new BufferedReader(new FileReader(csvFile)); // ファイルを読み込む
             br.readLine();
-            List<String[]> values = new ArrayList<>();
 
             try {
                 while ((line = br.readLine()) != null) { // ファイルの次の行に読み込むものがあるまで、処理を続ける
                     List<String> value = Arrays.asList(line.split(","));
-                    for (int i = 0; i < values.size(); i++) {
 
-                        quoteRepository.save(new Quote(value.get(0), value.get(1)));// 読み込んだデータをDBに登録する
-
-                    }
+                    // quoteRepository.save(new Quote(value.get(0), value.get(1)));
+                    // 読み込んだデータをDBに登録する
+                    // 読み込めない事象あり、読み込めない場合は下記で対応
+                    quoteRepository.save(new Quote(value.getFirst(), value.getLast()));
                 }
 
                 br.close();// ファイルを閉じる
             } catch (IOException e) {
+                e.printStackTrace();
             } finally {
                 br.close();
             }
         } catch (IOException e) {
+            e.printStackTrace();
 
         }
     }
